--- a/index.html
+++ b/index.html
@@ -352,16 +352,16 @@ button:hover{
 /* slider */
 
 .slide-1 {
-    background: linear-gradient(rgba(0,0,0,0.5), transparent), url(/assets/images/WhatsApp\ Image\ 2023-09-05\ at\ 9.42.33\ PM.jpeg);
+    background: linear-gradient(rgba(0,0,0,0.5), transparent), url(2023-09-05\ at\ 9.42.33\ PM.jpeg);
 }
 
 
 .slide-2 {
-    background: linear-gradient(rgba(0,0,0,0.5), transparent), url(/assets/images/WhatsApp\ Image\ 2023-09-05\ at\ 9.42.34\ PM\ \(1\).jpeg);
+    background: linear-gradient(rgba(0,0,0,0.5), transparent), url( 2023-09-05\ at\ 9.42.34\ PM\ \(1\).jpeg);
 }
 
 .slide-3 {
-    background: linear-gradient(rgba(0,0,0,0.5), transparent), url(/assets/images/WhatsApp\ Image\ 2023-09-05\ at\ 9.42.31\ PM.jpeg);
+    background: linear-gradient(rgba(0,0,0,0.5), transparent), url(2023-09-05\ at\ 9.42.31\ PM.jpeg);
 }
 
 .bg-cover {
