--- a/3ce.html
+++ b/3ce.html
@@ -18,7 +18,7 @@
   <nav class="navbar navbar-expand-lg bg-white shadow py-3 sticky-top ">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img src="/assets/images/book.png" width="40px" height="100px" alt="">
+        <img src="book.png" width="40px" height="100px" alt="">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
