--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ button:hover{
 /* slider */
 
 .slide-1 {
-    background: linear-gradient(rgba(0,0,0,0.5), transparent), url(WhatsApp Image 2023-09-05 at 9.42.33 PM.jpeg);
+    background: linear-gradient(rgba(0,0,0,0.5), transparent), url(hello.jpeg);
 }
 
 
