--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@ h2 {
     <div class="container"  style="background-color: grey;">
       <div class="row gy-4 align-items-center">
         <div class="col-lg-6 ">
-          <img id="image" src="/assets/images/abc.jpg" />
+          <img id="image" src="abc.jpg" />
 
 <script>
  
