--- a/index.html
+++ b/index.html
@@ -357,11 +357,11 @@ button:hover{
 
 
 .slide-2 {
-    background: linear-gradient(rgba(0,0,0,0.5), transparent), url( 2023-09-05\ at\ 9.42.34\ PM\ \(1\).jpeg);
+    background: linear-gradient(rgba(0,0,0,0.5), transparent), url( hi.jpeg);
 }
 
 .slide-3 {
-    background: linear-gradient(rgba(0,0,0,0.5), transparent), url(2023-09-05\ at\ 9.42.31\ PM.jpeg);
+    background: linear-gradient(rgba(0,0,0,0.5), transparent), url(him.jpeg);
 }
 
 .bg-cover {
